2007-04-27  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (collate_read): Allow order_start
	after copy.

	* locale/programs/ld-collate.c (collate_read): Fix printing of
	error message.

	[BZ #3213]
	* locale/C-translit.h.in: Add entry for U2044.

	[BZ #4342]
	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Allow
	hexa-decimal floats without exponent.
	* stdio-common/tstscanf.c (main): Adjust Test 8 test for success.

2007-04-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h: Declare sched_getcpu.
	* sysdeps/unix/sysv/linux/sched_getcpu.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S: New file.
	* sysdeps/unix/sysv/linux/Versions: Export sched_getcpu for
	GLIBC_2.6.
	* sysdeps/unix/sysv/linux/Makefile [subdir=posix] (sysdep_routines):
	Add sched_getcpu.

2007-04-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Return -1 instead
	of 0 after the out_fail label.

2007-04-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4406]
	* iconv/gconv_charset.h (strip): Allow ':'.
	* iconv/iconv_open.c (iconv_open): Adjust comment.

2007-04-25  Jakub Jelinek  <jakub@redhat.com>

	* libio/bits/stdio.h (fgetc_unlocked): Add extern inline optimized
	version.

2007-04-23  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4381]
	* nss/nss_files/files-hosts.c (HOST_DB_LOOKUP): Ensure sufficient
	alignment of buffer and tmp_buffer.
	* nis/nss_nis/nis-hosts.c (internal_nis_gethostent_r,
	internal_gethostbyname2_r, _nss_nis_gethostbyaddr_r): Ensure sufficient
	alignment of buffer.
	* resolv/nss_dns/dns-hosts.c (getanswer_r): Likewise.  Handle buflen
	bigger than INT_MAX.
	* resolv/nss_dns/dns-network.c (getanswer_r): Likewise.  Add errnop and
	h_errnop arguments.  Fail if buflen is too small.
	(_nss_dns_getnetbyname_r, _nss_dns_getnetbyaddr_r): Adjust callers.

2007-04-23  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4405]
	* iconvdata/gconv-modules (E13B): Add a missing slash to the alias